tests/snapshots/snapshot_test__identical_derivations.snap
---
source: tests/snapshot_test.rs
assertion_line: 44
expression: output
---
The derivations are identical.
